# yt-downloader-backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  hello.py  pyproject.toml  pytest.ini
src/tests/unit/: conftest.py  test_utils.py
src/yt_downloader_backend/: __main__.py  app.py  clients.py  config.py
src/yt_downloader_backend/api_models/: __init__.py  _delete_video.py  _download_video.py  _list_videos.py
src/yt_downloader_backend/requests/: __init__.py
src/yt_downloader_backend/routers/: __init__.py  video.py
