[project]
name = "yt-downloader-backend"
version = "0.1.0"
description = "Backend component to manage downloading youtube videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.36.25",
    "fastapi[standard]>=0.115.8",
    "hypercorn>=0.17.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
